# AM_ML_suite

./: .gitattributes  README.md  main.py  pyproject.toml
cpp_engine/: CMakeLists.txt
cpp_engine/include/am/: element_kernel.hpp  global_assembler.hpp  linear_solver.hpp  topology_optimizer.hpp
cpp_engine/src/: am_topopt.cpp  element_kernel.cpp  global_assembler.cpp  linear_solver.cpp  main.cpp  topology_optimizer.cpp
data/brk_a_01/: .gitkeep  brk_a_01_optimized.stl  density_field.npy  metadata.json
data/cpp_test_run/: brk_a_01_optimized.stl  density_field.npy  history.csv  metadata.json
notebooks/: 01_brk_a_01_topopt.ipynb  02_visualize_results.ipynb
src/: __init__.py  fem.py  geometry.py  loads.py  topopt.py
src/am/: __init__.py
src/am/ai/: __init__.py  inference.py  model.py
src/am/core/: __init__.py  geometry.py
src/am/numerical/: README.md  __init__.py  topopt.py
