[project]
name = "am"
version = "0.1.0"
description = "Topology Optimization for Additive Manufacturing - Aero Bracket Pilot Case"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pyvista>=0.46.5",
    "plotly>=6.5.2",
    "nbformat>=5.10.4",
]

[project.optional-dependencies]
viz = ["pyvista>=0.42"]
dev = ["jupyter>=1.0"]

[project.scripts]
am-topopt = "main:main"
